# brandon-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONVERSATION_CONTEXT_GUIDE.md  README.md  docker-compose.yaml  evaluate_prompts.sh  package-lock.json  package.json  rebuild.sh  test_curl.sh  test_messages.txt
docker/: Dockerfile  README.md  pyproject.toml  requirements.txt
docker/app/: README.md  api.py  main.py  mkdocs.yml  streamlit_app.py
docker/app/.streamlit/: config.toml
docker/app/controllers/: __init__.py  file_controller.py  image_controller.py  message_controller.py  response_controller.py  session_controller.py
docker/app/docs/: README.md  faq.md  index.md  mkdocs.yml  serve_docs.py  system_prompt_pattern.md  troubleshooting.md
docker/app/models/: __init__.py  chat_config.py  chat_message.py  session.py  tool_entity.py  user.py  validation.py
docker/app/services/: __init__.py  chat_service.py  conversation_context_service.py  document_analyzer_service.py  file_storage_service.py  image_service.py  llm_client_service.py  llm_service.py  pdf_analysis_service.py  pdf_batch_processor.py  pdf_chunking_service.py  pdf_context_service.py  pdf_ingestion_service.py  pdf_query_service_v2.py  pdf_summarization_service.py  pdf_summarizer_service_v2.py  response_parsing_service.py  session_state.py  streaming_service.py  text_processor_service.py  tool_execution_service.py  translation_service.py
docker/app/tools/: __init__.py  assistant.py  base.py  context_generation.py  conversation_context.py  deepresearcher.py  default_fallback.py  extract.py  generalist.py  image_analysis_tool.py  image_gen.py  initialize_tools.py  news.py  pdf_assistant.py  pdf_full_text.py  pdf_parser.py  pdf_summary.py  pdf_text_processor.py  registry.py  retriever.py  serpapi.py  tavily.py  tool_description_injector.py  tool_descriptions.py  tool_llm_config.py  veterinarian.py  weather.py
docker/app/ui/: __init__.py  components.py  styles.py  view_helpers.py  view_interfaces.py
docker/app/utils/: animated_loading.py  auth.py  batch_processor.py  config.py  environment.py  exceptions.py  executor_pool.py  image.py  llm_schema_manager.py  logging_config.py  model_schema_helper.py  model_schemas.json  pdf_extractor.py  pdf_id_generator.py  pdf_upload_handler.py  prompt_behavior_guide.md  response_examples.md  retrieval.py  simple_tool_filter.py  split_context.py  startup.py  streamlit_context.py  system_prompt.py  (+3 more)
(+75 files in other folders)
