[project]
authors = [
    { name = "Brandon Tuttle", email = "tuttlebr@ncc-1701.biz" }
]
name = "brandonbot"
version = "0.1.0"
description = "Agentic chatbot for the BrandonBot project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==0.3.25",
    "langchain-openai==0.3.23",
    "openai==1.86.0",
    "pillow==11.2.1",
    "pillow-heif==0.22.0",
    "pymilvus==2.5.7",
    "pytz==2025.2",
    "streamlit==1.46.1",
]

[project.optional-dependencies]
jupyterlab = [
    "ipympl==0.9.7",
    "jupyterlab==4.4.3",
    "nodejs-bin==18.4.0a4",
    "pandas==2.3.0",
    "seaborn==0.13.2",
    "theme-darcula==4.0.0",
]
