[project]
authors = [{ name = "Brandon Tuttle", email = "tuttlebr@ncc-1701.biz" }]
name = "brandonbot"
version = "0.1.0"
description = "Agentic chatbot for the BrandonBot project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html2text==2025.4.15",
    "beautifulsoup4==4.13.4",
    "langchain==0.3.25",
    "langchain-openai==0.3.23",
    "openai==1.86.0",
    "pillow==11.2.1",
    "pillow-heif==0.22.0",
    "pymilvus==2.5.7",
    "pytz==2025.2",
    "streamlit==1.46.1",
    "openmeteo-py==0.0.1",
    "streamlit-authenticator==0.4.2",
    "aiohttp==3.12.14",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "serpapi==0.1.5",
]

[project.optional-dependencies]
jupyterlab = [
    "ipympl==0.9.7",
    "jupyterlab==4.4.3",
    "nodejs-bin==18.4.0a4",
    "pandas==2.3.0",
    "seaborn==0.13.2",
    "theme-darcula==4.0.0",
    "pypdfium2==4.30.1",

]

streamlit-docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.8",
    "mkdocs-minify-plugin==0.7.1",
    "pymdown-extensions==10.4",
    "markdown==3.5.1",
    "Pygments==2.17.2",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "mkdocs-mermaid2-plugin==1.2.1",
]
